# acap-gemm-sa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: hls.cfg.in  pre_sim.tcl.in  xilinx-setup.cmake  xrt.ini
scripts/: check_simulation.py  device.py  heatmap.py  model.mod  model.py  monitor_power.py  parse_profile.py  pie.py  plot_bar.py  plot_misc.py  plot_scaling.py  solve_pl.py
src/: CMakeLists.txt  dma.cc  gemm.cc  gemm.hh  generate_gemm_data.py  graph.cc  graph.hh  host.cc  parameters.hh  place_design_pre.tcl  xsa.cfg
src-ideal/: CMakeLists.txt  dma.cc  gemm.cc  gemm.hh  generate_gemm_data.py  graph.cc  graph.hh  parameters.hh
src-trad/: CMakeLists.txt  gemm.cc  gemm.hh  graph.hh  host.cc  place_design_pre.tcl  xsa.cfg
